Completed menu system part 1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/PuzzlePlatforms/Dynamic/Maps/Lobby.Lobby
+GameDefaultMap=/Game/MenuSystem/Dynamic/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/PuzzlePlatforms/Dynamic/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/PuzzlePlatforms.PuzzlePlatformsGameMode"
 GameInstanceClass=/Script/PuzzlePlatforms.PuzzlePlatformsGameInstance
